[testing-vscode], some errors fixed

--- a/BlazorApp/Components/Pages/Home/Home.razor
+++ b/BlazorApp/Components/Pages/Home/Home.razor
@@ -6,7 +6,7 @@
 
 @using JokeUI.Models
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Joke Jokes all I can see</PageTitle>
 
 <div class="container">
     <div>
