--- a/BlazorApp/Components/Pages/Home/Home.razor
+++ b/BlazorApp/Components/Pages/Home/Home.razor
@@ -2,6 +2,8 @@
 @rendermode InteractiveServer
 
 @using JokeUI.Models
+@using Shared.DTO
+
 @inject JokeUI.Services.JokeService JokeService
 @inject ILogger<Home> Logger
 
@@ -9,12 +11,12 @@
 <div class="container">
     <h1 class="section-heading">Welcome to the Joke Manager</h1>
 
-    @* <input id="newJoke" @bind="newJokeContent" placeholder="Enter your joke here..." class="input-field" />
+    <input id="newJoke" @bind="newJokeContent" placeholder="Enter your joke here..." class="input-field" />
     <input id="newJoke" @bind="newJokeCategory" placeholder="Ente
-    r category here..." class="input-field" /> *@
+    r category here..." class="input-field" />
 
 
-    @* <button class="button" @onclick="AddJoke">Add Joke</button> *@
+    <button class="button" @onclick="AddJoke">Add Joke</button>
     <button class="button" @onclick="GetRandomJoke">Get Random Joke</button>
 
     <h2>Random Joke</h2>
@@ -27,28 +29,28 @@
     }
 
 
-    @* <div class="preview">
-    <h2 class="section-heading">Preview</h2>
-    <p>@newJokeContent</p>
-    </div> *@
+    <div class="preview">
+        <h2 class="section-heading">Preview</h2>
+        <p>@newJokeContent</p>
+    </div>
 
-    @* <div class="joke-list">
-    <h2 class="section-heading">Jokes</h2>
-    @if (jokes == null)
-    {
-    <p><em>Loading...</em></p>
-    }
+    <div class="joke-list">
+        <h2 class="section-heading">Jokes</h2>
+        @if (jokes == null)
+        {
+            <p><em>Loading...</em></p>
+        }
 
-    else
-    {
-    <ul class="joke-list">
-    @foreach (var joke in jokes)
-    {
-    <li class="joke-item">@joke.Content - @joke.Category</li>
-    }
-    </ul>
-    }
-    </div> *@
+        else
+        {
+            <ul class="joke-list">
+                @foreach (var joke in jokes)
+                {
+                    <li class="joke-item">@joke.Content - @joke.Category - @joke.Id</li>
+                }
+            </ul>
+        }
+    </div>
 </div>
 
 @code {
@@ -56,24 +58,28 @@
 
     private string newJokeContent = string.Empty;
     private string newJokeCategory = string.Empty;
+
+    private int jokeId;
     private Joke randomJoke;
-    private List<Joke> jokes;
+    private List<Joke> jokes = new List<Joke>();
 
 
 
-    @* private async Task AddJoke()
-{
-var newJoke = new Joke { Content = newJokeContent, Category = newJokeCategory };
-var createdJoke = await JokeService.AddJoke(newJoke);
+    private async Task AddJoke()
+    {
+        var newJoke = new JokeDTO { Content = newJokeContent, Category = newJokeCategory, UserId = 1 };
+        Joke createdJokeFromAPI = await JokeService.AddJoke(newJoke);
 
-jokes.Add(createdJoke);
-newJokeContent = string.Empty;
-} *@
+        jokes.Add(createdJokeFromAPI);
+
+        jokeId = createdJokeFromAPI.Id;
+        newJokeContent = string.Empty;
+        newJokeCategory = string.Empty;
+    }
 
     private async Task GetRandomJoke()
     {
         randomJoke = await JokeService.GetRandomJoke();
-        Logger.LogWarning($"Someone has clicked me! Received joke: {randomJoke.Content}");
-        StateHasChanged();
+        @* Logger.LogWarning($"Someone has clicked me! Received joke: {randomJoke.Content}"); *@
     }
 }
