--- a/BlazorApp/Components/Pages/Home/Home.razor
+++ b/BlazorApp/Components/Pages/Home/Home.razor
@@ -1,9 +1,9 @@
 ﻿@page "/"
 @rendermode InteractiveServer
 
+@using System.Collections.ObjectModel
 @using JokeUI.Models
 @using Shared.DTO
-@using System.Collections.ObjectModel
 
 
 @inject JokeUI.Services.JokeService JokeService
@@ -14,8 +14,7 @@
     <h1 class="section-heading">Welcome to the Joke Manager</h1>
 
     <input id="newJoke" @bind="newJokeContent" placeholder="Enter your joke here..." class="input-field" />
-    <input id="newJoke" @bind="newJokeCategory" placeholder="Ente
-    r category here..." class="input-field" />
+    <input id="newJoke" @bind="newJokeCategory" placeholder="Enter category here..." class="input-field" />
 
 
     <button class="button" @onclick="AddJoke">Add Joke</button>
@@ -67,7 +66,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        List<Joke> fetchedJokes = (await JokeService.GetAllJokes()).ToList(); // Corrected conversion
+        List<Joke> fetchedJokes = (await JokeService.GetAllJokes()).ToList();
 
         foreach (var joke in fetchedJokes)
         {
